syntax = "proto3";

package cloud.lianmi.im.wallet;
option go_package = "github.com/lianmi/servers/api/proto/wallet";

message RegisterWalletReq{
    //用户HD钱包的第0号索引对应的子地址, 同时存储eth及LNMC
    string walletAddress=1;

}

//code=200
message RegisterWalletRsp{
}